changed folder structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
 #Folders
-/data/raw_ham/
-/data/dataset/test/
-/data/dataset/train/
-/data/dataset/val/
+**/data/raw_ham/
+**/data/dataset/test/
+**/data/dataset/train/
+**/data/dataset/val/
 /venv/
+/temp
 
 #Files
-check.py
-Implementation Paper.pdf
-intel.py
 train_balanced.csv
